<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/loginPageMainConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_page_background_shape"
        tools:context="com.localfootball.page.login.LoginActivity">

    <ImageView
            android:id="@+id/loginPageBallImageView"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ball_icon" />

    <TextView
            android:id="@+id/loginPageRegistrationTextView"
            style="@style/loginLabelButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="24dp"
            android:text="@string/register_new_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/loginPageTitleTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:alpha="1"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/wallpoet"
            android:gravity="center"
            android:text="@string/local_football"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/loginPageEmailFieldComponentConstraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginPageBallImageView"
            app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginPageEmailFieldComponentConstraintLayout"
            style="@style/loginFieldStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="@+id/loginPageBallImageView"
            app:layout_constraintStart_toStartOf="@+id/loginPageBallImageView"
            app:layout_constraintTop_toTopOf="@+id/loginPageBallImageView">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginPageEmailFieldGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.180593" />

        <ImageView
                android:id="@+id/loginPageUserIconImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/loginPageEmailFieldGuideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.529"
                app:srcCompat="@drawable/user_icon" />

        <EditText
                android:id="@+id/loginPageEmailEditText"
                style="@style/loginInputStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="2dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/loginPageEmailFieldGuideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginPagePasswordFieldComponentConstraintLayout"
            style="@style/loginFieldStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="@+id/loginPageBallImageView"
            app:layout_constraintStart_toStartOf="@+id/loginPageBallImageView"
            app:layout_constraintTop_toBottomOf="@+id/loginPageEmailFieldComponentConstraintLayout">

        <ImageView
                android:id="@+id/loginPageLockIconImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/loginPagePasswordFieldGuideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/lock_icon" />

        <EditText
                android:id="@+id/loginPagePasswordEditText"
                style="@style/loginInputStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="2dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="false"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/loginPagePasswordFieldGuideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginPagePasswordFieldGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.18" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
            android:id="@+id/loginPageLoginButton"
            style="@style/loginButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/loginPageRegistrationTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>